jsapp/scss/components/_kobo.form-builder.scss
/* ... */
.form-builder__contents {
  height: calc(100% - #{$s-form-builder-header});
  overflow-x: auto;
  overflow-y: scroll;
  margin-right: 0;
  transition: margin $t-form-builder-aside-open;
  padding: 20px 40px;
  width: auto;

  .form-builder-message-box {
    max-width: $s-form-builder-content-width;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width: 1100px) {
  .form-builder-aside--visible + .form-builder,
  .lib-nav--visible + .form-builder {
    .form-builder__contents {
      margin-right: $s-form-builder-aside;
    }
  }
}

.form-wrap {
  width: 100%;
  padding: 45px 75px; // Similar to the previous form builder

  input,
  textarea {
    box-shadow: none;

    &:focus {
      box-shadow: none;
    }
  }

  .loading {
    min-height: 200px;
  }

  .error-message {
    width: 540px;
    margin: 24px auto;
    padding: 12px 20px;

    p {
      font-family: $font_mono;
      white-space: pre-wrap;
    }

    &__strong {
      border: 1px solid black;
      padding-right: 12px;
    }

    &__link {
      @extend .mdl-button;

      margin-right: 5px;

      &--raised {
        @extend .mdl-button--colored, .mdl-button--raised;
      }

      &--help {
        float: right;

        i {
          @extend .k-icon-help;
        }
      }
    }
  }
}

// FORM BUILDER HEADER

.form-builder-header {
  height: $s-form-builder-header;
  position: relative;
  z-index: z-indexes.$z-form-builder-header;

  .form-builder-header__row {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;

    &.form-builder-header__row--primary {
      background-color: colors.$kobo-white;
      height: 75px;
      position: relative;
      z-index: 2;
      box-shadow: 0 0 3px 0 rgba(colors.$kobo-gray-24, 0.2), 0 0 10px 0 rgba(colors.$kobo-gray-24, 0.1);
    }

    &.form-builder-header__row--secondary {
      background: colors.$kobo-gray-96;
      height: 50px;
      position: relative;
      z-index: 1;
      box-shadow: 0 0 3px 0 rgba(colors.$kobo-gray-24, 0.2), 0 0 10px 0 rgba(colors.$kobo-gray-24, 0.1);
    }
  }

  .form-builder-header__cell {
    &.form-builder-header__cell--logo {
      background-color: colors.$kobo-teal;
      width: 75px;
      text-align: center;
      vertical-align: middle;
      height: 75px;
      cursor: pointer;
      transition: 0.2s;

      &:hover {
        background-color: darken(colors.$kobo-teal, 10%);
      }

      &:focus {
        background-color: darken(colors.$kobo-teal, 10%);

        .k-icon {
          font-size: 40px;
          top: calc(50% - 19px);
          left: calc(50% - 19px);
        }
      }

      .k-icon {
        color: colors.$kobo-white;
        font-size: 36px;
        position: absolute;
        top: calc(50% - 17px);
        left: calc(50% - 17px);

        &::before {
          margin-right: 0;
        }
      }
    }

    &.form-builder-header__cell--name {
      flex: 1;
      margin-left: 20px;

      label::first-letter {
        text-transform: uppercase;
      }

      input {
        border-radius: 0;
        padding-left: 0;
        font-size: 16px;
      }
    }

    &.form-builder-header__cell--translations {
      p {
        margin: 0 0 0 10px;
        line-height: 15px;
        padding-top: 10px;
        font-size: 11px;

        small {
          display: block;
          color: colors.$kobo-gray-40;

          &::before {
            content: '+ ';
          }
        }
      }
    }

    &.form-builder-header__cell--buttonsTopRight {
      text-align: right;
      margin: 0 10px;

      button {
        margin-left: 10px;
      }
    }

    &.form-builder-header__cell--close {
      width: 45px;
      text-align: right;
      padding: 5px;
      margin-left: 5px;
    }

    // second row
    &.form-builder-header__cell--toolsButtons {
      margin: 0 10px;

      button {
        color: colors.$kobo-gray-40;
        // for tooltip
        overflow: visible;
        padding: 0;
        margin-right: 10px;

        &[data-tip]::after {
          margin-left: 30px;
        }

        &:hover,
        &:focus,
        &:focus:not(:active) {
          background-color: transparent;
        }

        &:hover {
          color: colors.$kobo-gray-24;
        }

        i {
          font-size: 24px;
          margin: 3px;
          vertical-align: middle;
        }

        &.add-questions-to-library {
          .k-icon-plus {
            color: colors.$kobo-teal;
            position: absolute;
            font-size: 16px;
            left: 13px;
            top: 15px;
          }
        }
      }

      button:last-child {
        margin-right: 0;
      }
    }

    &.form-builder-header__cell--supportUrl {
      margin: 0 10px;

      a:hover {
        color: colors.$kobo-gray-14;

        .k-icon {
          color: colors.$kobo-gray-14;
        }
      }

      i {
        font-size: 32px;
        vertical-align: bottom;
      }

      .k-icon {
        color: #8a8ea3;
        font-size: 32px;
        vertical-align: bottom;
      }
    }

    &.form-builder-header__cell--rightTaskbar-buttons {
      .k-icon {
        vertical-align: bottom;
      }
    }

    &.form-builder-header__cell--spacer {
      flex-grow: 1;
      height: 100%;
    }

    &.form-builder-header__cell--verticalRule {
      width: 1px;
      background: colors.$kobo-gray-92;
      height: 100%;
    }
  }
}

.form-builder-header__close {
  border: none;
  color: colors.$kobo-gray-40;
  cursor: pointer;

  @extend .mdl-button, .mdl-button--icon;

  &:hover {
    color: colors.$kobo-gray-24;
  }

  &:focus {
    i {
      @include form-builder-focus();
    }
  }
}
/* ... */

